Revert "a proposal for fixing long map titles for embed maps in an article on mobile"
This reverts commit 863343f856da526e62dc45ea3bc1e7727fcdd6cb.

--- a/extensions/wikia/WikiaInteractiveMaps/css/intMapParserTag.wikiamobile.scss
+++ b/extensions/wikia/WikiaInteractiveMaps/css/intMapParserTag.wikiamobile.scss
@@ -20,10 +20,7 @@
 		bottom: 10px;
 		font-weight: bold;
 		left: 10px;
-		overflow: hidden;
 		position: absolute;
-		text-overflow: ellipsis;
-		white-space: nowrap;
 	}
 
 	figcaption {
